--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf8">
+<link href="app.css" rel="stylesheet" type="text/css">
 <div id="app"></div>
 <script src="assets/index.js"></script>
 
