style search box

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PassStorage Web</title>
 
 <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-touch-icon-57x57.png">
