--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>PassStorage Web</title>
+<title>PasswordStorage Web</title>
 
 <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-touch-icon-60x60.png">
