--- a/template.html
+++ b/template.html
@@ -13,6 +13,7 @@
         font-family: sans-serif;
         font-size: 16px;
         background: #ddd;
+        overflow: hidden;
       }
     </style>
   </head>
